force-app/main/default/objects/Job__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>Expire date</description>
    <inlineHelpText>last date to apply</inlineHelpText>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>