force-app/main/default/objects/Job__c/fields/Hired_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Hired_Applicants__c</fullName>
    <description>This field indicates the count of the total Hired candidate has applied to this job.

It should be a numeric field and must be calculated automatically as any candidate is hired for a job( Candidate status = ‘Hired’);</description>
    <label>Hired Applicants</label>
    <summaryForeignKey>APEX_Candidate__c.Jobs__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>