force-app/main/default/objects/Job__c/fields/Job_Types__c.field-meta.xml
<CustomField>
    <fullName>Job_Types__c</fullName>
    <description>These are available jobs types</description>
    <label>Job Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>