force-app/main/default/objects/Job__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This is auto field</description>
    <displayFormat>JOB-{000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>