force-app/main/default/objects/Job__c/fields/Number_of_Positions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Positions__c</fullName>
    <description>Number of Positions  filed</description>
    <inlineHelpText>you can add up to 10 digits</inlineHelpText>
    <label>Number of Positions</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>