force-app/main/default/objects/Job__c/fields/Salary_Offered__c.field-meta.xml
<CustomField>
    <fullName>Salary_Offered__c</fullName>
    <description>Dollar format field</description>
    <label>Salary Offered</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>