force-app/main/default/objects/Job__c/recordTypes/MyRecType.recordType-meta.xml
<RecordType>
    <fullName>MyRecType</fullName>
    <active>true</active>
    <label>MyRecType</label>
</RecordType>